--- a/public/css/style.css
+++ b/public/css/style.css
@@ -322,7 +322,7 @@ header .form_div button.btn:hover i
 
 .section_1 .border {
     border: 1px solid #000;
-    min-height: 380px;
+    height: 380px;
     margin: 0 0 60px 0;
 }
 
